# platform.core.telephony.tel-plugin-indicator

./: AUTHORS  CMakeLists.txt
debian/: changelog  control  rules  tel-plugin-indicator.install.in
include/: s_indi_log.h  s_indi_main.h  s_indi_util.h
packaging/: tel-plugin-indicator.spec
src/: desc-indicator.c  desc.c  s_indi_log.c  s_indi_main.c
